# mpss-cli

./: CMakeLists.txt  README.md
scripts/: build_win_msvc2022.cmd
src/: main.cpp
